@@ -6,7 +6,7 @@ Date: 2014-03-16
 Author: Paradigm4, B. W. Lewis 
 Maintainer: B. W. Lewis <blewis@illposed.net>
 Copyright: Paradigm4, Inc.
-Description: SciDB is an open-source array database (http://scidb.org). The scidb package provides an R interface to SciDB.
+Description: An R interface to the open source SciDB array database (http://scidb.org).
 BugReports: https://github.com/Paradigm4/SciDBR/issues
 URL: http://paradigm4.github.io/SciDBR
 Depends: R (>= 3.0.0), methods
