@@ -1,13 +1,16 @@
 CHANGES IN scidb 1.1-3:
 
-   o Support for SciDB 14.7, untested backwards support for older releases
+   o Support for upcoming SciDB 14.12, untested backwards support for
+     older releases
 
    o Improved type parsing support, new binary transfer option for data frame
      objecs. This is much faster than UTF-8 transfer from SciDB.
 
+   o Support for streaming data from SciDB.
+
    o Option to disable interrupt handling for faster large data transfers.
 
-   o Added order function.
+   o Added functions include order, more flexible dist, peek.
 
 CHANGES IN scidb 1.1-2:
 
